--- a/web/chat.html
+++ b/web/chat.html
@@ -16,36 +16,6 @@
     <button class="btn btn-primary">Send</button>
     </form>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.3/angular.min.js"></script>
-    <script>
-      var app = angular.module("chat", []);
-
-      app.controller("MainCtrl", ["$scope", function($scope){
-        $scope.messages = [];
-        var conn = new WebSocket("ws://localhost:8080/ws");
-        conn.onclose = function(e){
-          $scope.$apply(function(){
-            $scope.messages.push('Disconnected');
-            });
-        }
-
-        conn.onopen = function(e){
-          $scope.$apply(function(){
-              $scope.messages.push('Connected');
-              });
-        }
-
-        conn.onmessage = function(e){
-
-          $scope.$apply(function(){
-              $scope.messages.push(e.data);
-              });
-        }
-
-        $scope.send = function(){
-          conn.send($scope.msg);
-          $scope.msg = '';
-        }
-      }])
-    </script>
+    <script src='/js/chat.js'> </script>
   </body>
 </html>
